Fix news snippet overflowing

--- a/client/src/styles/news.module.css
+++ b/client/src/styles/news.module.css
@@ -1,4 +1,6 @@
-.news-title {}
+.news-title {
+    font-size: 1.3rem;
+}
 
 .news-div {
     text-align: justify;
